--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <p>Get your greeting <a href="/greeting">here</a></p>
+<p><a href="/person">Person Form</a>
 <p><a href="/utf8-form.html">UTF-8 Form</a>
 <p><a href="/sjis-form.html">Shift_JIS Form</a>
 <p><a href="/w31j-form.html">Windows-31J Form</a>
