マルチプロジェク化、サービス層追加。

--- a/spring-example-app/src/main/resources/static/sjis-form.html
+++ b/spring-example-app/src/main/resources/static/sjis-form.html
@@ -10,7 +10,7 @@
 <form action="/greeting">
   <label for="name">Name: </label>
   <input type="text" name="name" maxlength="5"><br>
-  <input type="hidden" name="encoding" value="Windows-31J">
+  <input type="hidden" name="encoding" value="Shift_JIS">
   <input type="submit" value="ëóêM">
 </form>
 
@@ -29,7 +29,7 @@
       <td><button type="submit">ëóêM</button></td>
     </tr>
   </table>
-  <input type="hidden" name="encoding" value="Windows-31J">
+  <input type="hidden" name="encoding" value="Shift_JIS">
 </form>
 </body>
 </html>
