書式微修正。

--- a/spring-example-app/src/main/resources/static/index.html
+++ b/spring-example-app/src/main/resources/static/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Spring Example</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta charset="UTF-8">
 </head>
 <body>
 <p>Get your greeting <a href="/greeting">here</a></p>
