DBアクセスサンプル。

--- a/spring-example-app/src/main/resources/static/index.html
+++ b/spring-example-app/src/main/resources/static/index.html
@@ -10,5 +10,6 @@
 <p><a href="/utf8-form.html">UTF-8 Form</a>
 <p><a href="/sjis-form.html">Shift_JIS Form</a>
 <p><a href="/w31j-form.html">Windows-31J Form</a>
+<p><a href="/people">Person List</a>
 </body>
 </html>
