--- a/spring-example-app/src/main/resources/static/index.html
+++ b/spring-example-app/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
+<h1>Spring Example</h1>
 <p>Get your greeting <a href="/greeting">here</a></p>
 <p><a href="/person">Person Form</a>
 <p><a href="/utf8-form.html">UTF-8 Form</a>
